[package]
name = "perstai"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z" # Optimize for size.
strip = true
lto = true

[dependencies]
# apalis = { version = "0.5.3", features = ["cron"] }
# axum = "0.7.3"
chrono = { version = "0.4.38", features = ["serde", "clock"] }
# serde = { version = "1.0.203", features = ["derive"] }

tokio = { version = "1.28.2", features = ["full"] }
twapi-v2 = { version = "0.15.1", features = ["upload", "oauth10a"] }
dotenv = "0.15.0"
anyhow = "1"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
tokio-cron-scheduler = "0.9"
